# mark-scraper

./: CHANGELOG.md  README.md  pyproject.toml
mark_scraper/: __init__.py  cli.py  page.py  scraper.py
tests/: test_cli.py  test_scraper.py
